<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.authentication.LogIn">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:theme="@style/TextInputStyle"
                android:id="@+id/email"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:theme="@style/TextInputStyle"
                android:id="@+id/password"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/by_tapping_login_you_agree_to_our_nterms_and_privacy_policy"
                android:textSize="13sp" />


            <androidx.appcompat.widget.AppCompatButton
                style="@style/btnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:paddingEnd="24dp"
                android:paddingStart="0dp"
                android:text="Log In"
                android:id="@+id/logIn"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                style="@style/SocialMediaButton"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/SocialMediaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/facebook"
                android:drawableEnd="@drawable/facebook"
                android:text="@string/log_in_with"
                android:id="@+id/fbLogin"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/SocialMediaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/google"
                android:drawableEnd="@drawable/google"
                android:text="Log In with"
                android:id="@+id/gLogin"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>