<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    android:paddingTop="56dp"
    tools:context=".ui.Account"
    tools:ignore="HardcodedText|SmallSp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/profileInfo"
        android:layout_centerHorizontal="true"
        android:src="@color/white"
        android:translationZ="3dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="3dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="40dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/getReviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:id="@+id/reviews"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="-12dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/notificationsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notifications"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="70dp"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/videos"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp" />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_height="36dp"
                    android:text="@string/edit"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/account_edit"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:drawablePadding="-25dp"
                    android:id="@+id/editProfile"
                    android:background="@color/colorPrimary"
                    style="?android:attr/borderlessButtonStyle" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_height="36dp"
                    android:text="@string/log_out"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/logout"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:id="@+id/logOut"
                    android:drawablePadding="-10dp"
                    android:background="@color/colorPrimary"
                    android:layout_toEndOf="@id/editProfile"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_marginEnd="-42dp"/>


            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>