<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/account_body"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="-32dp"
        android:translationZ="3dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/white"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="loading"
                android:textColor="@color/deepGrey"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="loading"
                android:textColor="@color/deepGrey"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/account_body"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/account_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:text="35 Reviews"
                android:textColor="@color/white"
                android:id="@+id/reviews"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDarkOld" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="35 Notifications"
                android:textColor="@color/white"
                android:id="@+id/notificationsNumber"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDarkOld" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="35 Followings"
                android:textColor="@color/white"
                android:id="@+id/followings"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDarkOld" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/account_bottom_shape"
                android:orientation="horizontal"
                android:gravity="bottom">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editProfile"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="0.1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/account_edit"
                    android:drawablePadding="-25dp"
                    android:paddingStart="30dp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:background="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logOut"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_toEndOf="@id/editProfile"
                    android:layout_weight="0.1"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="-30dp"
                    android:text="@string/log_out"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>